--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 								<li>Expanding the capabilities of AR Foundation, Unity’s AR toolkit, with user requested and partner contracted features like debug visualizers, real-world light estimation, and occlusion.</li>
 								<li>Designing a C# AR API available to 100k+ developers which enables more realistic shaders.</li>
 								<li>Coordinating with engineers across multiple hardware sub-teams to produce a consistent user experience.</li>
-								<li>Implementing the Unity engine API in c++ on a major industry partner’s unannounced AR/VR headset.</li>
+								<li>Implementing the Unity engine API in C++ on a major industry partner’s unannounced AR/VR headset.</li>
 							</ul>
 						</div>
 						<div class="resume-item">
@@ -494,10 +494,11 @@
 							<h5>March 2021 - July 2023</h5>
 							<p><em>Niantic — San Francisco, CA </em></p>
 							<ul>
-								<li>Shipped Peridot, a cutting-edge AR mobile pet-sim game with millions of installs in a small team. Focused on client development in Unity.</li>
-								<li>Implemented retention-critical features like social systems, questing, notifications, streaks, telemetry.</li>
+								<li>Shipped Peridot, a cutting-edge AR mobile pet-sim game with millions of installs. Worked in a small team and focused on client development in Unity.</li>
+								<li>Implemented retention-critical features like social systems, questing, notifications, streaks, telemetry.
+									<li>Generated > 20% DAU improvement via notification features.</li>
+								</li>
 								<li>Collaborated with internal and external partners to efficiently integrate a variety of services.</li>
-								<li>Built native features where engine capabilities did not meet user needs.</li>
 								<li>Constructed internal tooling used daily by animation, audio, and tech art teams to allow rapid iteration.</li>
 							</ul>
 						</div>
